--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -26,6 +26,10 @@ h2 {
   flex-shrink: 0;
 }
 
+#page2 .group{
+  direction: ltr;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
